--- a/harrypotterNetwork.ipynb
+++ b/harrypotterNetwork.ipynb
@@ -8,8 +8,7 @@
    "source": [
     "import networkx as nx\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import mpld3"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
